--- a/css/src/afui.less
+++ b/css/src/afui.less
@@ -135,7 +135,7 @@ body {
 
 
 
-    .afScrollPanel { width:100%; min-height:100%;overflow:hidden;/*hack to auto expand height with floats*/ }
+    .afScrollPanel { width:100%; min-height:100%;overflow-y:hidden;/*hack to auto expand height with floats*/ }
 
 
 
